--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="col-lg-6">
                     <!-- form fields -->
                     <form name="gform" id="gform" enctype="text/plain" 
-                    action="https://docs.google.com/forms/d/e/1FAIpQLSdVOLj0434KwsjGm0mWHSb18Yv4zjDpzYvmEztRV7yzcIiLkA/formResponse?usp=pp_url&entry.2005620554=name&entry.1045781291=kzheng0507@gmail.com&entry.1065046570=subject&entry.839337160=message" 
+                    action="https://docs.google.com/forms/d/e/1FAIpQLSdVOLj0434KwsjGm0mWHSb18Yv4zjDpzYvmEztRV7yzcIiLkA/formResponse?" 
                     target="hidden_iframe" onsubmit="submitted=true;">
                         <input type="text" class="form-control form-control-lg" placeholder="Name" name="entry.2005620554" id="entry.2005620554">
                         <input type="email" class="form-control mt-3" placeholder="Email" name="entry.1045781291" id="entry.1045781291">
@@ -227,7 +227,7 @@
                             <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Message" name="entry.839337160" id="entry.839337160"></textarea>
                         </div>
                         <br>
-                        <button type="submit" class="btn btn-success mt-3">Contact Me</button>
+                        <button type="submit" class="btn btn-success mt-3" value="Submit">Contact Me</button>
                     </form>
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 
