Fix Form being moved to footer

--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
                 <div class="col-lg-6">
                     <!-- form fields -->
                     <form name="gform" id="gform" enctype="text/plain" 
-                    action="https://docs.google.com/forms/d/e/1FAIpQLSdVOLj0434KwsjGm0mWHSb18Yv4zjDpzYvmEztRV7yzcIiLkA/formResponse?" 
-                    target="hidden_iframe" onsubmit="submitted=true;">
+                    action="https://docs.google.com/forms/d/e/1FAIpQLSdVOLj0434KwsjGm0mWHSb18Yv4zjDpzYvmEztRV7yzcIiLkA/formResponse?"      target="hidden_iframe" onsubmit="submitted=true;">
                         <input type="text" class="form-control form-control-lg" placeholder="Name" name="entry.2005620554" id="entry.2005620554">
                         <input type="email" class="form-control mt-3" placeholder="Email" name="entry.1045781291" id="entry.1045781291">
                         <input type="text" class="form-control mt-3" placeholder="Subject" name="entry.1065046570" id="entry.1065046570">
@@ -247,6 +246,7 @@
             </div>
         </div>
     </section>
+               
     <!-- footer section-->
     <footer id="footer">
         <div class="container pt-1 pb-1">
