--- a/index.html
+++ b/index.html
@@ -217,18 +217,18 @@
 
                 <div class="col-lg-6">
                     <!-- form fields -->
-                    <form name="gform" id="gform" enctype="text/plain" 
+                    <form name="gform" id="gform"  
                     action="https://docs.google.com/forms/d/e/1FAIpQLSdVOLj0434KwsjGm0mWHSb18Yv4zjDpzYvmEztRV7yzcIiLkA/formResponse?"      target="hidden_iframe" onsubmit="submitted=true;">
                         <input type="text" class="form-control form-control-lg" placeholder="Name" name="entry.2005620554" id="entry.2005620554">
                         <input type="email" class="form-control mt-3" placeholder="Email" name="entry.1045781291" id="entry.1045781291">
                         <input type="text" class="form-control mt-3" placeholder="Subject" name="entry.1065046570" id="entry.1065046570">
                         <div class="mb-3 mt-3">
-                            <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Message" name="entry.839337160" id="entry.839337160"></textarea>
+                            <textarea class="form-control" rows="5" placeholder="Message" name="entry.839337160" id="entry.839337160"></textarea>
                         </div>
                         <br>
                         <button type="submit" class="btn btn-success mt-3" value="Submit">Contact Me</button>
                     </form>
-                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
 
                     <script type="text/javascript">
                         var submitted = false;
