Made A List App

--- a/index.html
+++ b/index.html
@@ -91,14 +91,6 @@
 
                             </ul>
                         </div>
-                        <!-- <div class="col-md-6">
-                            <ul>
-                                <li>Name: David Parker</li>
-                                <li>Age: 28</li>
-                                <li>Occupation: Web Developer</li>
-
-                            </ul>
-                        </div> -->
                     </div>
                     <div class="row mt-3">
                         <p style="font-size: 20px;"> As a Computer Science major with a passion for technology and problem-solving, I am seeking an IT helpdesk position where I can apply my knowledge and excellent customer service skills. 
@@ -110,24 +102,24 @@
     </section>
 
     <!-- portfolio section-->
-    <!-- <section id="portfolio">
+    <section id="portfolio">
         <div class="container pt-3 pb-3" >
             <h1 class="text-center" style="color:white">Portfolio</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/doodle_cart.png" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Placeholder</h4>
                             <p class="card-text">TBM</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://kzhenglist.netlify.app/" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4 mt-4">
+                <!-- <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
                         <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
@@ -193,8 +185,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-    </section> -->
+            </div> -->
+    </section>
 
     <!-- contact section-->
     <section id="contact">
