--- a/index.html
+++ b/index.html
@@ -11,23 +11,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
-
-  <style>
-
-    #about {
-        background-color: rgb(36, 35, 35);
-        color: white;
-    }
-
-    #portfolio {
-        background-color: rgb(36, 35, 35);
-    }
-
-    #contact{
-        background-color: rgb(36, 35, 35);
-        color: white;
-    }
-</style>
 </head>
 
 <body>
@@ -53,7 +36,9 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
-                
+                <button id="darkModeToggle" class="btn btn-outline-light ms-3" type="button" title="Toggle dark mode">
+                    <i class="fas fa-moon"></i>
+                </button>
             </div>
         </div>
     </nav>
@@ -86,7 +71,7 @@
                         <div class="col-md-6">
                             <ul>
                                 <li>Name: Kevin Zheng</li>
-                                <li>Age: 24</li>
+                                <li>Age: 25</li>
                                 <li>Occupation: Web Developer</li>
 
                             </ul>
@@ -108,10 +93,10 @@
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/doodle_cart.png" alt="Card image" style="width:100%">
+                        <img class="card-img-top portfolio-img" src="images/doodle_cart.png" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Placeholder</h4>
-                            <p class="card-text">TBM</p>
+                            <h4 class="card-title">Netlify Test</h4>
+                            <p class="card-text">Basic project testing using Netlify</p>
                             <div class="text-center">
                                 <a href="https://kzhenglist.netlify.app/" class="btn btn-success">Link</a>
                             </div>
@@ -119,74 +104,24 @@
                     </div>
                 </div>
 
-                <!-- <div class="col-lg-4 mt-4">
+                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top portfolio-img" src="images/BasicProject.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Placeholder</h4>
-                            <p class="card-text">TBM</p>
+                            <h4 class="card-title">Basic Project</h4>
+                            <p class="card-text">Basic programming projects</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
-                            <h4 class="card-title">Placeholder</h4>
-                            <p class="card-text">TBM</p>
-                            <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="basicprogram/organize.html" class="btn btn-success mb-1">Organize Files</a>
+                                <a href="basicprogram/hangman.html" class="btn btn-primary mb-1">Hangman Game</a>
+                                <a href="basicprogram/calculator.html" class="btn btn-secondary">Command-Line Calculator</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
-                            <h4 class="card-title">Placeholder</h4>
-                            <p class="card-text">TBM</p>
-                            <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
-                            <h4 class="card-title">Placeholder</h4>
-                            <p class="card-text">TBM</p>
-                            <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
-                            <h4 class="card-title">Placeholder</h4>
-                            <p class="card-text">TBM</p>
-                            <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+        </div>
     </section>
+
 
     <!-- contact section-->
     <section id="contact">
@@ -255,7 +190,27 @@
 
     <!-- load javascript after loading all html content -->
     <script src="script/script.js"></script>
-
+    <script>
+        // Global error handler
+        window.onerror = function(message, source, lineno, colno, error) {
+            let errorDiv = document.getElementById('global-error');
+            if (!errorDiv) {
+                errorDiv = document.createElement('div');
+                errorDiv.id = 'global-error';
+                errorDiv.style.position = 'fixed';
+                errorDiv.style.bottom = '0';
+                errorDiv.style.left = '0';
+                errorDiv.style.width = '100%';
+                errorDiv.style.background = '#dc3545';
+                errorDiv.style.color = '#fff';
+                errorDiv.style.padding = '10px';
+                errorDiv.style.zIndex = '9999';
+                errorDiv.style.textAlign = 'center';
+                document.body.appendChild(errorDiv);
+            }
+            errorDiv.textContent = "An unexpected error occurred. Please refresh the page or try again later.";
+            return false; // Let the browser log the error as well
+        };
+    </script>
 </body>
-
 </html>
