--- a/index.html
+++ b/index.html
@@ -12,29 +12,20 @@
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-    <!-- navbar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <a class="navbar-brand" href="#">Kevin</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand fw-bold fs-3" href="#">Kevin</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
                 <button id="darkModeToggle" class="btn btn-outline-light ms-3" type="button" title="Toggle dark mode">
                     <i class="fas fa-moon"></i>
@@ -42,75 +33,62 @@
             </div>
         </div>
     </nav>
-    <!-- main banner -->
-    <section class="bgimage" id="home">
-        <div class="container-fluid">
-            <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title">Hello, I am Kevin</h2>
-                <p class="hero_desc">I am eager to contribute my technical skills and passion to innovative companies.</p>
+
+    <!-- Hero Section -->
+    <section class="bgimage d-flex align-items-center justify-content-center position-relative" id="home" style="min-height:100vh;">
+        <div class="container text-center hero-section-box position-relative">
+            <div class="hero-content-box mx-auto p-5 rounded shadow-lg">
+                <h1 class="hero_title fw-bold mb-3">Hello, I am Kevin</h1>
+                <p class="hero_desc mb-4">I am eager to contribute my technical skills and passion to innovative companies.</p>
+                <a href="#portfolio" class="btn btn-success btn-lg">View Portfolio</a>
             </div>
+            <img src="images/Laptop-PNG-Transparent-Image.png" alt="Laptop" class="hero-laptop-img position-absolute">
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">About Me</h2>
+            <div class="row align-items-center">
+                <div class="col-md-4 text-center mb-4 mb-md-0">
+                    <img src="images/self.jpg" class="imageAboutPage rounded shadow" alt="Kevin Zheng">
+                </div>
+                <div class="col-12 col-md-8">
+                    <p class="fs-5">Hello, my name is Kevin Zheng. I recently graduated from West Virginia University's Benjamin M. Statler College of Engineering and Mineral Resources with a Bachelor’s degree in Computer Science.</p>
+                    <ul class="list-unstyled fs-5 mb-4">
+                        <li><strong>Name:</strong> Kevin Zheng</li>
+                        <li><strong>Age:</strong> 25</li>
+                        <li><strong>Occupation:</strong> Web Developer</li>
+                    </ul>
+                    <p class="fs-5">As a Computer Science major with a passion for technology and problem-solving, I am seeking an IT helpdesk position where I can apply my knowledge and excellent customer service skills. With specialized training in HTML, CSS, Javascript, I aim to progress towards a career in web development, contributing innovative solutions and engaging user experiences.</p>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- about section-->
-    <section id="about">
-        <div class="p-5 py-4">
-            <h1 class="text-center">About Me</h1>
-            <div class="row mt-4">
-                <div class="col-lg-4">
-                    <img src="images/self.jpg" class= "imageAboutPage" alt="">
-                </div>
-
-                <div class="col-lg-8">
-                    <p style="font-size: 20px;"> Hello, my name is Kevin Zheng. I recently graduated from West Virginia University's Benjamin M. Statler College of Engineering and Mineral Resources with a Bachelor’s degree in Computer Science.
-                        
-                    </p>
-                    <div class="row mt-3">
-                        <div class="col-md-6">
-                            <ul>
-                                <li>Name: Kevin Zheng</li>
-                                <li>Age: 25</li>
-                                <li>Occupation: Web Developer</li>
-
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <p style="font-size: 20px;"> As a Computer Science major with a passion for technology and problem-solving, I am seeking an IT helpdesk position where I can apply my knowledge and excellent customer service skills. 
-                            With specialized training in HTML,CSS,Javascript , I aim to progress towards a career in web development, contributing innovative solutions and engaging user experiences.
-                        </p>
-                    </div>
-                </div>
-            </div>
-    </section>
-
-    <!-- portfolio section-->
-    <section id="portfolio">
-        <div class="container pt-3 pb-3" >
-            <h1 class="text-center" style="color:white">Portfolio</h1>
-            <div class="row">
-                <div class="col-lg-4 mt-4">
-                    <div class="card">
-                        <img class="card-img-top portfolio-img" src="images/doodle_cart.png" alt="Card image" style="width:100%">
-                        <div class="card-body">
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="py-5" style="background: #181a1b;">
+        <div class="container">
+            <h2 class="text-center text-white mb-5">Portfolio</h2>
+            <div class="row g-4">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card portfolioContent h-100 shadow">
+                        <img class="card-img-top portfolio-img" src="images/doodle_cart.png" alt="Netlify Test">
+                        <div class="card-body d-flex flex-column">
                             <h4 class="card-title">Netlify Test</h4>
-                            <p class="card-text">Basic project testing using Netlify</p>
-                            <div class="text-center">
-                                <a href="https://kzhenglist.netlify.app/" class="btn btn-success">Link</a>
-                            </div>
+                            <p class="card-text flex-grow-1">Basic project testing using Netlify</p>
+                            <a href="https://kzhenglist.netlify.app/" class="btn btn-success mt-auto">Link</a>
                         </div>
                     </div>
                 </div>
-
-                 <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top portfolio-img" src="images/BasicProject.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card portfolioContent h-100 shadow">
+                        <img class="card-img-top portfolio-img" src="images/BasicProject.jpg" alt="Basic Project">
+                        <div class="card-body d-flex flex-column">
                             <h4 class="card-title">Basic Project</h4>
-                            <p class="card-text">Basic programming projects</p>
-                            <div class="text-center">
+                            <p class="card-text flex-grow-1">Basic programming projects</p>
+                            <div class="d-grid gap-2">
                                 <a href="basicprogram/organize.html" class="btn btn-success mb-1">Organize Files</a>
                                 <a href="basicprogram/hangman.html" class="btn btn-primary mb-1">Hangman Game</a>
                                 <a href="basicprogram/calculator.html" class="btn btn-secondary">Command-Line Calculator</a>
@@ -118,45 +96,56 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card portfolioContent h-100 shadow">
+                        <img class="card-img-top portfolio-img" src="images/weather_dashboard.png" alt="Weather Dashboard">
+                        <div class="card-body d-flex flex-column">
+                            <h4 class="card-title">Weather API Dashboard</h4>
+                            <p class="card-text flex-grow-1">
+                                A simple dashboard using OpenWeatherMap API.<br>
+                                <strong>Features:</strong><br>
+                                - Search weather by city<br>
+                                - Shows temperature, humidity, and conditions<br>
+                                <span class="text-muted" style="font-size:0.95em;">
+                                    Powered by OpenWeatherMap API.
+                                </span>
+                            </p>
+                            <a href="weather-dashboard.html" class="btn btn-info mt-auto" target="_blank">Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Portfolio card for chat & mail removed -->
             </div>
         </div>
     </section>
 
-
-    <!-- contact section-->
-    <section id="contact">
-        <div class="container pt-3 pb-1">
-            <h1 class="text-center">Contact Me</h1>
-
-            <div class="row mt-4">
-                <div class="col-lg-6">
-                    <!-- to edit google map goto https://www.embed-map.com type your location, generate html code and copy the html  -->
-                    <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
-                        <div id="embedmap-canvas" style="height:100%; width:100%;max-width:100%;">
-                            <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Stamford,+CT,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
-                            </iframe>
-                        </div>
-                        <a class="googlemaps-html" href="https://www.embed-map.com" id="get-data-forembedmap">https://www.embed-map.com</a>
-                        <style>#embedmap-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}
-                        </style>
+    <!-- Contact Section -->
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Contact Me</h2>
+            <div class="row g-4">
+                <div class="col-12 col-md-6">
+                    <div style="width:100%;height:350px;overflow:hidden;">
+                        <iframe style="width:100%;height:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Stamford,+CT,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
                     </div>
                 </div>
-
-                <div class="col-lg-6">
-                    <!-- form fields -->
-                    <form name="gform" id="gform"  
-                    action="https://docs.google.com/forms/d/e/1FAIpQLSdVOLj0434KwsjGm0mWHSb18Yv4zjDpzYvmEztRV7yzcIiLkA/formResponse?"      target="hidden_iframe" onsubmit="submitted=true;">
-                        <input type="text" class="form-control form-control-lg" placeholder="Name" name="entry.2005620554" id="entry.2005620554">
-                        <input type="email" class="form-control mt-3" placeholder="Email" name="entry.1045781291" id="entry.1045781291">
-                        <input type="text" class="form-control mt-3" placeholder="Subject" name="entry.1065046570" id="entry.1065046570">
-                        <div class="mb-3 mt-3">
+                <div class="col-12 col-md-6">
+                    <form name="gform" id="gform" action="https://docs.google.com/forms/d/e/1FAIpQLSdVOLj0434KwsjGm0mWHSb18Yv4zjDpzYvmEztRV7yzcIiLkA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
+                        <div class="mb-3">
+                            <input type="text" class="form-control form-control-lg" placeholder="Name" name="entry.2005620554" id="entry.2005620554">
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" placeholder="Email" name="entry.1045781291" id="entry.1045781291">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" placeholder="Subject" name="entry.1065046570" id="entry.1065046570">
+                        </div>
+                        <div class="mb-3">
                             <textarea class="form-control" rows="5" placeholder="Message" name="entry.839337160" id="entry.839337160"></textarea>
                         </div>
-                        <br>
-                        <button type="submit" class="btn btn-success mt-3" value="Submit">Contact Me</button>
+                        <button type="submit" class="btn btn-success w-100" value="Submit">Contact Me</button>
                     </form>
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
-                    <!--hides form element and display message that the messsage has been processed-->
                     <script type="text/javascript">
                         var submitted = false;
                         document.getElementById('gform').addEventListener('submit', function(e) {
@@ -169,22 +158,21 @@
                         });
                     </script>
                 </div>
-
             </div>
         </div>
     </section>
-               
-    <!-- footer section-->
-    <footer id="footer">
-        <div class="container pt-1 pb-1">
-            <!-- social media icons -->
-            <div class="social-icons mt-4">
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
+
+    <!-- Footer -->
+    <footer id="footer" class="py-4">
+        <div class="container text-center">
+            <div class="social-icons mb-3">
+                <a href="https://www.facebook.com/" target="_blank" class="mx-2"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" class="mx-2"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.twitter.com/" target="_blank" class="mx-2"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank" class="mx-2"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.twitch.tv/" target="_blank" class="mx-2"><i class="fab fa-twitch"></i></a>
             </div>
+            <small class="text-white-50">© 2024 Kevin Zheng. All rights reserved.</small>
         </div>
     </footer>
 
@@ -206,11 +194,14 @@
                 errorDiv.style.padding = '10px';
                 errorDiv.style.zIndex = '9999';
                 errorDiv.style.textAlign = 'center';
+                errorDiv.style.display = 'none';
                 document.body.appendChild(errorDiv);
             }
             errorDiv.textContent = "An unexpected error occurred. Please refresh the page or try again later.";
-            return false; // Let the browser log the error as well
+            errorDiv.style.display = 'block';
+            return false;
         };
     </script>
 </body>
 </html>
+
