--- a/weather-dashboard.html
+++ b/weather-dashboard.html
@@ -38,6 +38,23 @@
         }
         .map-container {
             margin-top: 2rem;
+        }
+        @media (max-width: 600px) {
+            .weather-box {
+                padding: 1em;
+                max-width: 98vw;
+                margin: 1em auto;
+            }
+            .weather-icon {
+                width: 56px;
+                height: 56px;
+            }
+            .forecast-card {
+                min-width: 90px;
+                font-size: 0.95em;
+                padding: 0.3em;
+            }
+        }
             margin-bottom: 2rem;
         }
         .map-title {
